# projectX

./: .gitignore  Dockerfile  build.sh  config.py  deploy.sh  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run.py
app/: __init__.py  api_routes.py  config.py  pocketbase_client.py  routes.py  utils.py
app/public/static/css/: main.css
app/public/static/js/: api.js  main.js  map.js  place.js  ui.js  utils.js
app/public/templates/: index.html  place.html
app/public/templates/components/: inline_form.html  marker.html  place_selection_modal.html
pb_data/: data.db  data.db-shm  data.db-wal  logs.db  logs.db-shm  logs.db-wal
templates/: old.html
