[tool.poetry]
name = "project-x"
version = "0.1.0"
description = ""
authors = ["eran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pocketbase = "^0.12.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
